--- a/src/app/layouts/dummie/dummie.component.html
+++ b/src/app/layouts/dummie/dummie.component.html
@@ -1,16 +1,39 @@
-<p>dummie works!</p>
+<p>playground!</p>
 <div class="row">
-    <div class="col-md-5">
-      <button type="button" class="btn btn-primary">Primary</button>
-    </div>
+  <div class="col-md-5">
+    <button type="button" class="btn btn-primary">Primary</button>
   </div>
-  <div class="row">
-    <div class="col-md-5 offset-md-2">
-      <button type="button" class="btn btn-primary">Primary</button>
-      <button type="button" class="btn btn-danger">Danger</button>
-      <button type="button" class="btn btn-warning">Warning</button>
-      <button type="button" class="btn btn-info">Info</button>
-    </div>
+</div>
+<div class="row">
+  <div class="col-lg-5 col-xl-5">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="Enter email"
+        />
+        <small id="emailHelp" class="form-text text-muted"
+          >We'll never share your email with anyone else.</small
+        >
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          placeholder="Password"
+        />
+      </div>
+    </form>
   </div>
-  <div class="row">
+</div>
+<div class="row">
+  <div class="col-lg-5 col-xl-5">
+    <ngb-datepicker #dp></ngb-datepicker>
   </div>
+</div>
